# XJsonView

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  dist-workspace.toml
.claude/skills/jfmt-iterate/: SKILL.md
.github/workflows/: ci.yml  viewer-release.yml
apps/jfmt-viewer/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
apps/jfmt-viewer/e2e/: package.json  tsconfig.json  wdio.conf.ts
apps/jfmt-viewer/e2e/specs/: open-tree-pointer.e2e.ts  regex-and-export.e2e.ts
apps/jfmt-viewer/src/: App.tsx  api.ts  index.css
apps/jfmt-viewer/src-tauri/: Cargo.toml  tauri.conf.json
apps/jfmt-viewer/src-tauri/capabilities/: default.json
apps/jfmt-viewer/src-tauri/icons/: icon.icns
apps/jfmt-viewer/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
apps/jfmt-viewer/src/components/: ContextMenu.tsx  HitList.tsx  Preview.tsx  SearchBar.tsx  Tree.tsx  TreeRow.tsx
apps/jfmt-viewer/src/components/ui/: button.tsx  dialog.tsx  input.tsx
apps/jfmt-viewer/src/lib/: clipboard.ts  exportFlow.ts  jsonHighlight.tsx  searchState.ts  theme.ts
crates/jfmt-cli/: Cargo.toml
crates/jfmt-cli/src/: cli.rs  exit.rs  lib.rs  main.rs
crates/jfmt-cli/src/commands/: convert.rs  filter.rs  minify.rs  mod.rs  pretty.rs  ram_budget.rs  validate.rs  view.rs
crates/jfmt-cli/src/commands/convert/: array_rule.rs  format.rs  json_to_xml.rs  xml_to_json.rs
crates/jfmt-cli/tests/: cli_convert.rs  cli_filter.rs  cli_minify.rs  cli_pretty.rs  cli_validate.rs  cli_view.rs  cli_view_placeholder.rs  proptest_convert.rs
crates/jfmt-cli/tests/fixtures/: bad.json  filter_array.json  filter_lines.ndjson  filter_materialize_array.json  ndjson-good.ndjson  ndjson-many.ndjson  ndjson-mixed.ndjson  schema_user.json  schema_user_array.json  schema_user_ndjson.ndjson  simple.json  simple.min.json  simple.pretty2.json  simple.pretty4.json
crates/jfmt-cli/tests/fixtures/convert/: atom_feed.json  atom_feed.xml  data_records.json  data_records.xml  mixed_content.json  mixed_content.xml  noncontiguous_siblings.xml  svg_path.json  svg_path.xml
crates/jfmt-core/: Cargo.toml
crates/jfmt-core/benches/: bench_ndjson_pipeline.rs  bench_parser.rs  bench_writer.rs
crates/jfmt-core/src/: error.rs  escape.rs  event.rs  lib.rs  parser.rs  transcode.rs
crates/jfmt-core/src/filter/: compile.rs  materialize.rs  mod.rs  output.rs  runtime.rs  shard.rs  static_check.rs
crates/jfmt-core/src/ndjson/: mod.rs  reorder.rs  splitter.rs  worker.rs
crates/jfmt-core/src/validate/: mod.rs  ndjson.rs  schema.rs  stats.rs  syntax.rs
crates/jfmt-core/src/writer/: minify.rs  mod.rs  pretty.rs
crates/jfmt-core/tests/: filter_materialize.rs  filter_ndjson.rs  filter_shard_roundtrip.rs  filter_streaming.rs  ndjson_pipeline.rs  roundtrip_proptest.rs  validate_proptest.rs  validate_schema_materialize.rs  validate_schema_ndjson.rs  validate_schema_streaming.rs
crates/jfmt-io/: Cargo.toml
crates/jfmt-io/src/: compress.rs  input.rs  lib.rs  output.rs
crates/jfmt-viewer-core/: CHANGELOG.md  Cargo.toml
crates/jfmt-viewer-core/src/: error.rs  index.rs  lib.rs  ndjson.rs  pointer.rs  search.rs  session.rs  types.rs
crates/jfmt-viewer-core/tests/: big_array.rs  proptest_roundtrip.rs
crates/jfmt-viewer-core/tests/fixtures/: deep.json  large-ndjson.ndjson  ndjson.ndjson  small.json
crates/jfmt-xml/: Cargo.toml
crates/jfmt-xml/src/: error.rs  event.rs  lib.rs  reader.rs  writer.rs
crates/jfmt-xml/tests/: proptest_roundtrip.rs
docs/superpowers/plans/: 2026-04-23-jfmt-m1-core-pretty-minify.md  2026-04-24-jfmt-m2-validate-stats.md  2026-04-25-jfmt-m3-ndjson-pipeline.md  2026-04-25-jfmt-m4a-filter.md  2026-04-25-jfmt-m4b-materialize.md  2026-04-25-jfmt-m5-schema.md  2026-04-26-jfmt-m6-release-polish.md  2026-04-26-jfmt-m7-xml-support.md  2026-05-08-jfmt-m8-1-viewer-core.md  2026-05-09-jfmt-m10-viewer-perf.md  2026-05-09-jfmt-m8-2-viewer-polish.md  2026-05-09-jfmt-m9-search-enhance.md
docs/superpowers/specs/: 2026-04-23-jfmt-phase1-design.md  2026-04-25-jfmt-m3-ndjson-pipeline-design.md  2026-04-25-jfmt-m4a-filter-design.md  2026-04-25-jfmt-m4b-materialize-design.md  2026-04-25-jfmt-m5-schema-design.md  2026-04-26-jfmt-m6-release-polish-design.md  2026-04-26-jfmt-m7-xml-support-design.md  2026-05-08-jfmt-m8-viewer-skeleton-design.md  2026-05-09-jfmt-m10-viewer-perf-design.md  2026-05-09-jfmt-m9-search-enhance-design.md
scripts/: gen_big_json.py
