[workspace]
resolver = "2"
members = ["crates/jfmt-core", "crates/jfmt-io", "crates/jfmt-cli"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lizhongwei/XJsonView"
authors = ["lizhongwei <lzw1003362793@gmail.com>"]

[workspace.dependencies]
# Core streaming parser
struson = "0.6"
# Error handling
thiserror = "1"
anyhow = "1"
# I/O
flate2 = "1"
zstd = "0.13"
# CLI — pinned to keep MSRV 1.75 (later clap pulls clap_lex 1.1.0 which
# requires cargo edition2024, unavailable before 1.85).
clap = { version = "=4.5.20", features = ["derive"] }
# Test utilities — versions pinned to stay MSRV 1.75 compatible (later
# releases pull transitive deps that require cargo edition2024).
assert_cmd = "=2.0.16"
predicates = "=3.1.2"
tempfile = "=3.14.0"
proptest = "=1.5.0"
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "=1.0.132"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
