[package]
name = "jfmt-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "jfmt"
path = "src/main.rs"

[dependencies]
jfmt-core = { path = "../jfmt-core" }
jfmt-io = { path = "../jfmt-io" }
clap = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
