[package]
name = "jfmt-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "Streaming JSON / NDJSON formatter and filter CLI"
keywords = ["json", "jq", "ndjson", "cli", "formatter"]
categories = ["command-line-utilities"]
readme = "../../README.md"

[[bin]]
name = "jfmt"
path = "src/main.rs"

[dependencies]
jfmt-core = { path = "../jfmt-core" }
jfmt-io = { path = "../jfmt-io" }
jfmt-xml = { path = "../jfmt-xml" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
