[package]
name = "jfmt-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
struson = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam-channel = { workspace = true }
num_cpus = { workspace = true }
jaq-core = { workspace = true }
jaq-std = { workspace = true }
jaq-json = { workspace = true, features = ["serde_json"] }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
