[package]
name = "jfmt-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "Streaming JSON / NDJSON parser, writer, filter, validator at TB scale"
keywords = ["json", "ndjson", "streaming", "parser", "jq"]
categories = ["parser-implementations", "data-structures"]
readme = "../../README.md"

[dependencies]
struson = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam-channel = { workspace = true }
num_cpus = { workspace = true }
jaq-core = { workspace = true }
jaq-std = { workspace = true }
jaq-json = { workspace = true, features = ["serde_json"] }
jsonschema = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
