[package]
name = "jfmt-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
jfmt-core = { path = "../jfmt-core" }
flate2 = { workspace = true }
zstd = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
