[package]
name = "jfmt-viewer-core"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Streaming index + IPC data model for the jfmt GUI viewer."
repository.workspace = true

[dependencies]
jfmt-core = { path = "../jfmt-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
memchr.workspace = true
smallvec.workspace = true

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

