[package]
name = "jfmt-viewer-app"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "jfmt GUI viewer (Tauri 2)"
default-run = "jfmt-viewer-app"

[dependencies]
jfmt-viewer-core = { path = "../../../crates/jfmt-viewer-core" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
dashmap = "6"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
